Fix alignment of StalledIcon

--- a/src/css/components/Icon.scss
+++ b/src/css/components/Icon.scss
@@ -28,7 +28,7 @@
 .stalled.icon {
   display: inline-block;
   position: relative;
-  left: 30px;
+  left: 7px;
   height: 4px;
 
   div {
